fix issue found online + command 2weeks error

--- a/mydashboard/templates/dashboard/index.html
+++ b/mydashboard/templates/dashboard/index.html
@@ -6,7 +6,9 @@
 </h2>
 <article class="art-dashboard">
 	<div class="container-dashboard">
-		<div id='graph' class="graph"></div>
+		<div class="container-graph">
+			<div id='graph' class="graph"></div>
+		</div>
 		<div class="container-button">
 			<div onclick=owner()  class="" title="propriétaire(s) devant stériliser">Propriétaires <br> avec obligations : {{nb_owners}}</div>
 			<div onclick=contacted() class="" title="propriétaire(s) à contacter"> Propriétaires <br> à contacter : {{nb_to_contact}} </div>
