--- a/spa_core/static/spa_core/css/split/nav.scss
+++ b/spa_core/static/spa_core/css/split/nav.scss
@@ -27,8 +27,10 @@
 			margin: 2rem auto;
 			font-size: 1.5rem; 
 			&:hover{
-				border: 3px black solid;
+				border: 1px black solid;
 				cursor: pointer;
+				background-color: $primary;
+				color: white; 
 			}
 		}
 	}
