--- a/spa-conf/static/spa_core/css/split/dashboard.scss
+++ b/spa-conf/static/spa_core/css/split/dashboard.scss
@@ -13,6 +13,7 @@
 				border: 2px white solid; 
 				border-radius: 2rem 2rem 0 0 ;
 				.graph{ 
+					height: 60vh; 
 					border: 2px black solid; 
 					border-radius: 2rem 2rem 0 0 ;
 
